4550.	[cleanup]	Increased the number of available master file
			output style flags from 32 to 64. [RT #44043]

4547.	[port]		Add support for --enable-native-pkcs11 on the AEP
			Keyper HSM. [RT #42463]

	--- 9.10.5b1 released ---

4543.	[bug]		dns_client_startupdate now delays sending the update
			request until isc_app_ctxrun has been called.
			[RT #43976]

4541.	[bug]		rndc addzone should properly reject non master/slave
			zones. [RT #43665]

4539.	[bug]		Referencing a nonexistent zone with RPZ could lead
			to a assertion failure when configuring. [RT #43787]

4538.	[bug]		Call dns_client_startresolve from client->task.
			[RT #43896]

4537.	[bug]		Handle timeouts better in dig/host/nslookup. [RT #43576]

4536.	[bug]		ISC_SOCKEVENTATTR_USEMINMTU was not being cleared
			when reusing the event structure. [RT #43885]

4535.	[bug]		Address race condition in setting / testing of
			DNS_REQUEST_F_SENDING. [RT #43889]

4534.	[bug]		Only set RD, RA and CD in QUERY responses. [RT #43879]

4533.	[bug]		dns_client_update should terminate on prerequisite
			failures (NXDOMAIN, YXDOMAIN, NXRRSET, YXRRSET)
			and also on BADZONE.  [RT #43865]

4532.	[contrib]	Make gen-data-queryperf.py python 3 compatible.
			[RT #43836]

4530.	[bug]		Change 4489 broke the handling of CNAME -> DNAME
			in responses resulting in SERVFAIL being returned.
			[RT #43779]

4529.	[cleanup]	Silence noisy log warning when DSCP probe fails
			due to firewall rules. [RT #43847]

4528.	[bug]		Only set the flag bits for the i/o we are waiting
			for on EPOLLERR or EPOLLHUP. [RT #43617]

4527.	[doc]		Support DocBook XSL Stylesheets v1.79.1. [RT #43831]

4526.	[doc]		Corrected errors and improved formatting of
			grammar definitions in the ARM. [RT #43739]

4525.	[doc]		Fixed outdated documentation on managed-keys.
			[RT #43810]

4524.	[bug]		The net zero test was broken causing IPv4 servers
			with addresses ending in .0 to be rejected. [RT #43776]
