@@ -1,3 +1,6 @@
+4551.	[test]		Add system tests for integrity checks of MX and
+			SRV records. [RT #43953]
+
 4550.	[cleanup]	Increased the number of available master file
 			output style flags from 32 to 64. [RT #44043]
 
